# WGPU-3D-model-viewer

./: .gitignore  Cargo.toml  README.md
res/: cube.mtl
src/: camera.rs  camera_controller.rs  debug.wgsl  light.wgsl  main.rs  model.rs  orbit_camera.rs  resources.rs  shader.wgsl  utils.rs
