[package]
name = "wgpu-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.10.1"
instant = "0.1.12"
log = "0.4.20"
pollster = "0.3.0"
tobj = { version = "4.0.0", features = ["async"] }
wgpu = "0.18.0"
winit = { version = "0.29.7", features = ["rwh_05"] }

[profile.dev]
opt-level = 3

[build-dependencies]
anyhow = "1.0.75"
fs_extra = "1.3.0"
glob = "0.3.1"
